Added them PA3 folder

--- a/PA2_final_release/visualize_correspondence.ipynb
+++ b/PA2_final_release/visualize_correspondence.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-12T19:26:54.987627Z",
+     "start_time": "2025-03-12T19:26:22.136747Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -24,7 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1461e8ce0>"
+       "<matplotlib.image.AxesImage at 0x14474cb00>"
       ]
      },
      "execution_count": 2,
@@ -1144,7 +1149,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x13feddaf0>"
+       "<matplotlib.image.AxesImage at 0x144ed4b30>"
       ]
      },
      "execution_count": 7,
@@ -1178,7 +1183,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1462148c0>"
+       "<matplotlib.image.AxesImage at 0x144780710>"
       ]
      },
      "execution_count": 8,
@@ -1239,7 +1244,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x146d667e0>"
+       "<matplotlib.image.AxesImage at 0x1459ef560>"
       ]
      },
      "execution_count": 10,
@@ -1273,7 +1278,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1401ccfe0>"
+       "<matplotlib.image.AxesImage at 0x144fa5d30>"
       ]
      },
      "execution_count": 11,
@@ -1334,7 +1339,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1466ebbc0>"
+       "<matplotlib.image.AxesImage at 0x145b67e00>"
       ]
      },
      "execution_count": 13,
@@ -1368,7 +1373,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x146e5d670>"
+       "<matplotlib.image.AxesImage at 0x144781160>"
       ]
      },
      "execution_count": 14,
@@ -1429,7 +1434,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x146db45f0>"
+       "<matplotlib.image.AxesImage at 0x145a3b740>"
       ]
      },
      "execution_count": 16,
